fixing missing icons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Font Awesome kit icons (free version)-->
-    <script src="https://kit.fontawesome.com/7ded8db56b.js" crossorigin="anonymous"></script>
+    <script defer src="https://kit.fontawesome.com/7ded8db56b.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link defer rel="preconnect" href="https://fonts.googleapis.com">
     <link defer rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -266,7 +266,7 @@
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fas fa-comments"></i></div>
+            <div class="divider-custom-icon"><i class="fa-solid fa-comments"></i></div>
             <div class="divider-custom-line"></div>
         </div>
 
@@ -296,7 +296,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fas fa-address-card"></i></div>
+                <div class="divider-custom-icon"><i class="fa-solid fa-address-card"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Contact Section -->
