--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -41,10 +41,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
-    <!-- Font Awesome icons (free version)-->
-    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
-        integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
-        crossorigin="anonymous"></script>
+    <!-- Font Awesome kit icons (free version)-->
+    <script defer src="https://kit.fontawesome.com/7ded8db56b.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link defer rel="preconnect" href="https://fonts.googleapis.com">
     <link defer rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,7 +82,7 @@
                 data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
                 Menu
-                <i class="fas fa-bars"></i>
+                <i class="fa-solid fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
@@ -230,7 +228,7 @@
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fas fa-gamepad"></i></div>
+            <div class="divider-custom-icon"><i class="fa-solid fa-gamepad"></i></div>
             <div class="divider-custom-line"></div>
         </div>
     </section>
@@ -247,7 +245,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fas fa-scroll"></i></div>
+                <div class="divider-custom-icon"><i class="fa-solid fa-scroll"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
             <!-- About Section Content-->
@@ -343,7 +341,7 @@
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fas fa-gavel"></i></div>
+            <div class="divider-custom-icon"><i class="fa-solid fa-gavel"></i></div>
             <div class="divider-custom-line"></div>
         </div>
     </section>
