fixing missing icons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Font Awesome kit icons (free version)-->
-    <script defer src="https://kit.fontawesome.com/7ded8db56b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/369113839d.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link defer rel="preconnect" href="https://fonts.googleapis.com">
     <link defer rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
