--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -42,7 +42,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
     <!-- Font Awesome kit icons (free version)-->
-    <script defer src="https://kit.fontawesome.com/7ded8db56b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/369113839d.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link defer rel="preconnect" href="https://fonts.googleapis.com">
     <link defer rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
