--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -4,10 +4,29 @@
 <head>
     <!--PWA-->
     <link rel="manifest" href="/manifest.webmanifest">
-    <!--Logrocket -->
-    <script defer src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-    <script defer>
-        window.LogRocket && window.LogRocket.init('dqqywl/nairol32-prod');
+    <!-- OpenReplay Tracking Code for nair0lf32.github.io -->
+    <script>
+        var initOpts = {
+            projectKey: "6442744483684795",
+            defaultInputMode: 0,
+            obscureTextNumbers: false,
+            obscureTextEmails: true,
+        };
+        var startOpts = { userID: "" };
+        (function (A, s, a, y, e, r) {
+            r = window.OpenReplay = [e, r, y, [s - 1, e]];
+            s = document.createElement('script'); s.src = A; s.async = !a;
+            document.getElementsByTagName('head')[0].appendChild(s);
+            r.start = function (v) { r.push([0]) };
+            r.stop = function (v) { r.push([1]) };
+            r.setUserID = function (id) { r.push([2, id]) };
+            r.setUserAnonymousID = function (id) { r.push([3, id]) };
+            r.setMetadata = function (k, v) { r.push([4, k, v]) };
+            r.event = function (k, p, i) { r.push([5, k, p, i]) };
+            r.issue = function (k, p) { r.push([6, k, p]) };
+            r.isActive = function () { return false };
+            r.getSessionToken = function () { };
+        })("//static.openreplay.com/latest/openreplay.js", 1, 0, initOpts, startOpts);
     </script>
     <!--Meta tags -->
     <meta charset="utf-8" />
