switch to line-awesome icons

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     <!-- JQuery My boy :) -->
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- Font Awesome kit icons (free version)-->
-    <script src="https://kit.fontawesome.com/369113839d.js" crossorigin="anonymous"></script>
+    <!-- Line awesome icons (free version)-->
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <!-- Google fonts-->
     <link defer rel="preconnect" href="https://fonts.googleapis.com">
     <link defer rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,18 +86,18 @@
     <!-- For loading purposes-->
     <div class="flex-fill loader"> <img class="img-hover-zoom" src="/assets/img/pacman.svg"
             alt="pac-man-spinner from loading.io">
-        <p class="text-center text-white mb-0 loadtext">loading...</p>
+        <p class="text-center text-white mb-0 loadtext">loading</p>
     </div>
 
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg bg-secondary text-white fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">nair0lf32</a>
-            <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button"
+            <button class="navbar-toggler text-lowercase font-weight-bold bg-primary text-white rounded" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
                 Menu
-                <i class="fa-solid fa-bars"></i>
+                <i class="las la-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
@@ -197,12 +198,12 @@
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fa-solid fa-user-astronaut"></i></div>
+                <div class="divider-custom-icon"><i class="las la-user-astronaut la-2x"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">Medic - Codeur - graphiste amateur - Gamer - Flemmard
-                à plein temps</p>
+            <p class="masthead-subheading font-weight-light mb-0">Medic - Codeur - Graphiste amateur - Gamer - Flemmard
+                professionel</p>
         </div>
     </header>
     <!-- Portfolio Section-->
@@ -225,7 +226,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fa-solid fa-book"></i></div>
+                <div class="divider-custom-icon"><i class="las la-book la-2x"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
             <!-- About Section Content-->
@@ -283,7 +284,7 @@
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fa-solid fa-comments"></i></div>
+            <div class="divider-custom-icon"><i class="las la-comments la-2x"></i></div>
             <div class="divider-custom-line"></div>
         </div>
 
@@ -313,7 +314,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fa-solid fa-address-card"></i></div>
+                <div class="divider-custom-icon"><i class="las la-address-card la-2x"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Contact Section -->
@@ -323,7 +324,7 @@
                     <p class="contacts font-weight-light mb-0">
                         mail: florianedem@gmail.com </br></pbr>
                         tel: (+229) 67242336 </br>
-                        télépathie ou vaudou: Je déconne j'ai pas ce réseau là (les utilisateurs me contactez pas svp)
+                        télépathie/vaudou: Je déconne j'ai pas ce réseau là ( les utilisateurs me contactez pas svp )
                     </p>
 
                 </div>
@@ -347,14 +348,14 @@
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Sur le Web</h4>
                     <a class="btn btn-outline-light btn-social mx-1"
-                        href="https://web.facebook.com/florian.edemessi.9/"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        href="https://web.facebook.com/florian.edemessi.9/"><i class="lab la-facebook-f la-2x"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/FlorianEdemessi"><i
-                            class="fab fa-fw fa-twitter"></i></a>
+                            class="lab la-twitter la-2x"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1"
                         href="https://www.linkedin.com/in/florian-edemessi-b29129172/ "><i
-                            class="fab fa-fw fa-linkedin-in"></i></a>
+                            class="lab la-linkedin-in la-2x"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://wa.me/22967242336"><i
-                            class="fab fa-fw fa-whatsapp"></i></a>
+                            class="lab la-whatsapp la-2x"></i></a>
                 </div>
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
