--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -58,8 +58,9 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
-    <!-- Font Awesome kit icons (free version)-->
-    <script src="https://kit.fontawesome.com/369113839d.js" crossorigin="anonymous"></script>
+    <!-- Line awesome icons (free version)-->
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <!-- Google fonts-->
     <link defer rel="preconnect" href="https://fonts.googleapis.com">
     <link defer rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -88,18 +89,18 @@
     <!-- For loading purposes-->
     <div class="flex-fill loader img-hover-zoom"> <img class="img-hover-zoom" src="/assets/img/pacman.svg"
             alt="pac-man-spinner from loading.io">
-        <p class="text-center text-white mb-0 loadtext">loading...</p>
+        <p class="text-center text-white mb-0 loadtext">loading</p>
     </div>
 
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg bg-secondary text-white fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">nair0lf32</a>
-            <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button"
+            <button class="navbar-toggler text-lowercase font-weight-bold bg-primary text-white rounded" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
                 Menu
-                <i class="fa-solid fa-bars"></i>
+                <i class="las la-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
@@ -200,29 +201,29 @@
             <div class="carousel-item active">
                 <img src="/assets/img/lolpics/wpp.jpg" class="d-block w-100" alt="lol-wpp">
                 <div class="carousel-caption">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
-                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
+                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends</h4>
+                    <p class="py-1 text-center"> Par Riot Games</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/assets/img/lolpics/wpp2.jpg" class="d-block w-100" alt="lol-wpp2">
                 <div class="carousel-caption ">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
-                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
+                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends</h4>
+                    <p class="py-1 text-center"> Par Riot Games</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/assets/img/lolpics/wpp3.jpg" class="d-block w-100" alt="lol-wpp3">
                 <div class="carousel-caption ">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
-                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
+                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends</h4>
+                    <p class="py-1 text-center"> Par Riot Games</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/assets/img/lolpics/wpp4.png" class="d-block w-100" alt="lol-wpp4">
                 <div class="carousel-caption ">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends fanzone </h4>
-                    <p class="py-1 text-center"> Par Riot Games .inc (Non approuvé)</p>
+                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends</h4>
+                    <p class="py-1 text-center"> Par Riot Games</p>
                 </div>
             </div>
         </div>
@@ -245,7 +246,7 @@
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fa-solid fa-gamepad"></i></div>
+            <div class="divider-custom-icon"><i class="las la-gamepad la-2x"></i></div>
             <div class="divider-custom-line"></div>
         </div>
     </section>
@@ -262,7 +263,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fa-solid fa-scroll"></i></div>
+                <div class="divider-custom-icon"><i class="las la-scroll la-2x"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
             <!-- About Section Content-->
@@ -358,7 +359,7 @@
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="fa-solid fa-gavel"></i></div>
+            <div class="divider-custom-icon"><i class="las la-gavel la-2x"></i></div>
             <div class="divider-custom-line"></div>
         </div>
     </section>
