--- a/index.html
+++ b/index.html
@@ -114,75 +114,7 @@
         </div>
     </nav>
 
-    <!-- GTranslate: https://gtranslate.io/ -->
-    <div class="page-section d-flex align-items-center flags bg-secondary justify-content-center">
-        <a href="#" onclick="doGTranslate('fr|ar');return false;" title="Arabic" class="gflag nturl"
-            style="background-position:-100px -0px;"><img src="//gtranslate.net/flags/blank.png" height="24" width="24"
-                alt="Arabic" /></a><a href="#" onclick="doGTranslate('fr|zh-TW');return false;"
-            title="Chinese (Traditional)" class="gflag nturl" style="background-position:-400px -0px;"><img
-                src="//gtranslate.net/flags/blank.png" height="24" width="24" alt="Chinese (Traditional)" /></a><a
-            href="#" onclick="doGTranslate('fr|en');return false;" title="English" class="gflag nturl"
-            style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="24" width="24"
-                alt="English" /></a><a href="#" onclick="doGTranslate('fr|fr');return false;" title="French"
-            class="gflag nturl" style="background-position:-200px -100px;"><img src="//gtranslate.net/flags/blank.png"
-                height="24" width="24" alt="French" /></a><a href="#" onclick="doGTranslate('fr|de');return false;"
-            title="German" class="gflag nturl" style="background-position:-300px -100px;"><img
-                src="//gtranslate.net/flags/blank.png" height="24" width="24" alt="German" /></a><a href="#"
-            onclick="doGTranslate('fr|iw');return false;" title="Hebrew" class="gflag nturl"
-            style="background-position:-200px -300px;"><img src="//gtranslate.net/flags/blank.png" height="24"
-                width="24" alt="Hebrew" /></a><a href="#" onclick="doGTranslate('fr|hi');return false;" title="Hindi"
-            class="gflag nturl" style="background-position:-500px -100px;"><img src="//gtranslate.net/flags/blank.png"
-                height="24" width="24" alt="Hindi" /></a><a href="#" onclick="doGTranslate('fr|it');return false;"
-            title="Italian" class="gflag nturl" style="background-position:-600px -100px;"><img
-                src="//gtranslate.net/flags/blank.png" height="24" width="24" alt="Italian" /></a><a href="#"
-            onclick="doGTranslate('fr|ja');return false;" title="Japanese" class="gflag nturl"
-            style="background-position:-700px -100px;"><img src="//gtranslate.net/flags/blank.png" height="24"
-                width="24" alt="Japanese" /></a><a href="#" onclick="doGTranslate('fr|pt');return false;"
-            title="Portuguese" class="gflag nturl" style="background-position:-300px -200px;"><img
-                src="//gtranslate.net/flags/blank.png" height="24" width="24" alt="Portuguese" /></a><a href="#"
-            onclick="doGTranslate('fr|ru');return false;" title="Russian" class="gflag nturl"
-            style="background-position:-500px -200px;"><img src="//gtranslate.net/flags/blank.png" height="24"
-                width="24" alt="Russian" /></a><a href="#" onclick="doGTranslate('fr|es');return false;" title="Spanish"
-            class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png"
-                height="24" width="24" alt="Spanish" /></a>
-    </div>
-    <script defer type="text/javascript">
-        function googleTranslateElementInit2() {
-            new google.translate.TranslateElement({
-                pageLanguage: 'fr',
-                autoDisplay: false
-            }, 'google_translate_element2');
-        }
-    </script>
-    <script defer type="text/javascript"
-        src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
-    <script defer type="text/javascript">
-        /* <![CDATA[ */
-        eval(function (p, a, c, k, e, r) {
-            e = function (c) {
-                return (c < a ? '' : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) :
-                    c.toString(36))
-            };
-            if (!''.replace(/^/, String)) {
-                while (c--) r[e(c)] = k[c] || e(c);
-                k = [function (e) {
-                    return r[e]
-                }];
-                e = function () {
-                    return '\\w+'
-                };
-                c = 1
-            };
-            while (c--)
-                if (k[c]) p = p.replace(new RegExp('\\b' + e(c) + '\\b', 'g'), k[c]);
-            return p
-        }('6 7(a,b){n{4(2.9){3 c=2.9("o");c.p(b,f,f);a.q(c)}g{3 c=2.r();a.s(\'t\'+b,c)}}u(e){}}6 h(a){4(a.8)a=a.8;4(a==\'\')v;3 b=a.w(\'|\')[1];3 c;3 d=2.x(\'y\');z(3 i=0;i<d.5;i++)4(d[i].A==\'B-C-D\')c=d[i];4(2.j(\'k\')==E||2.j(\'k\').l.5==0||c.5==0||c.l.5==0){F(6(){h(a)},G)}g{c.8=b;7(c,\'m\');7(c,\'m\')}}',
-            43, 43,
-            '||document|var|if|length|function|GTranslateFireEvent|value|createEvent||||||true|else|doGTranslate||getElementById|google_translate_element2|innerHTML|change|try|HTMLEvents|initEvent|dispatchEvent|createEventObject|fireEvent|on|catch|return|split|getElementsByTagName|select|for|className|goog|te|combo|null|setTimeout|500'
-                .split('|'), 0, {}))
-                /* ]]> */
-    </script>
-    <div id="google_translate_element2"></div>
+
 
 
     <!-- Masthead-->
@@ -235,13 +167,12 @@
                     <p class="lead"> Salut, Je suis EDEMESSI florian, étudiant en medecine à la faculté des sciences
                         de la santé (FSS) de cotonou. passionné de développement informatique, j'ai touché à pas mal
                         de choses dans le domaine. Développement web (évidemment...), graphisme, programmation desktop,
-                        android,
-                        modélisation/animation 3D,
-                        motion graphics 2D, montage vidéo, vfx, beatmaking, game-design (j'ai du mal à me spécialiser en
-                        fait).
-                        Mais là où je suis pas trop mauvais et où je m'amuse le plus, c'est le coding.
-                        Je suis en permanence en train d'apprendre un truc nouveau...Là par exemple je me lance dans la
-                        cybersécurité (hehehe).
+                        android, modélisation/animation 3D, motion graphics 2D, montage vidéo, vfx, beatmaking,
+                        game-design
+                        (j'ai du mal à me spécialiser en fait).
+                        Mais là où je suis pas trop mauvais et où je m'amuse le plus, c'est le coding et l'infosec.
+                        Je suis en permanence en train d'apprendre un truc nouveau...
+                        Là par exemple je me lance dans la cybersécurité (hehehe).
                         Quand je ne foutille pas à l'hopital (vive l'externat),
                         Il m'arrive de Jouer sur mon Pc. c'est probablement mon principal hobby, et actuellement je
                         gaspille de nombreuses heures sur league of legends et quelques jeux solo que mon ordinateur
@@ -249,22 +180,21 @@
                     </p>
                 </div>
                 <div class="col-lg-4 me-auto">
-                    <p class="lead"> Ceci est mon site web personnel (hébergée sur Github). Un petit projet personnel
-                        qui me sert
-                        de couverture et que j'enrichirai avec des pages personelles.
+                    <p class="lead"> Ceci est mon site web personnel (hébergé sur Github). Un petit projet personnel
+                        qui me sert de couverture et que j'enrichirai avec des pages personelles.
                         Il se peut que j'ajoute des trucs ou que je modifie d'autres. Il y a justement en bas un espace
                         de commentaires. Vous pouvez y laisser un message sympa, une blague, une image drole, ou une
                         critique CONSTRUCTIVE et proposer des trucs à ajouter ou retirer...
                         Vous pouvez le faire anonymement ou vous conneter (Sign in) par les moyens proposés.
                         Le Menu (voir la barre de navigation en haut)
                         contient toutes les pages du site, donc vous pouvez l'explorer pour voir le contenu que
-                        j'ajoute (quand ja'ai pas trop la flemme).
+                        j'ajoute (quand j'ai pas trop la flemme).
                         par exemple il y a une page fanzone league of legends (pourquoi pas) où je parle brièvement du
                         jeu. Vous pouvez y accéder via le Menu ou en cliquant <a href="/lol-fanzone.html"
-                            role="button">ici</a>. Si vous voulez voir mes projets pros...Je bosse actuellement sur mon
-                        portfolio. vous pouvez le voir en cliquant ici:
-                        <br> <br>
-                        <a href="https://nair0lf32.github.io/portfolio" role="button">Portfolio</a>.
+                            role="button">ici</a>.
+                        Si vous voulez voir mes projets pros, je bosse actuellement sur mon
+                        portfolio que vous pouvez voir en cliquant sur ce lien: <a
+                            href="https://nair0lf32.github.io/portfolio" role="button"> Mon Portfolio </a>
 
                         <br><br><br>
                         <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;">
@@ -346,7 +276,7 @@
                 </div>
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4">Sur le Web</h4>
+                    <h4 class="text-lowercase mb-4">Sur le Web</h4>
                     <a class="btn btn-outline-light btn-social mx-1"
                         href="https://web.facebook.com/florian.edemessi.9/"><i class="lab la-facebook-f la-2x"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/FlorianEdemessi"><i
@@ -359,17 +289,86 @@
                 </div>
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
-                    <h4 class="text-uppercase mb-0">Ce site web est alimenté par github pages et réalisé avec
-                        "freelance"</h4>
+                    <h4 class="text-lowercase mb-0">Ce site web est alimenté par github pages et bootstrap</h4>
                     <p class="lead mb-0">
                         Freelance est un thème Bootstrap gratuit, sous license MIT créé par
                         <a href="http://startbootstrap.com">Start Bootstrap</a>
-                        .
                     </p>
                 </div>
             </div>
         </div>
     </footer>
+
+    <!-- GTranslate: https://gtranslate.io/ -->
+    <div class="page-section d-flex align-items-center flags bg-secondary justify-content-center">
+        <a href="#" onclick="doGTranslate('fr|ar');return false;" title="Arabic" class="gflag nturl"
+            style="background-position:-100px -0px;"><img src="//gtranslate.net/flags/blank.png" height="24" width="24"
+                alt="Arabic" /></a><a href="#" onclick="doGTranslate('fr|zh-TW');return false;"
+            title="Chinese (Traditional)" class="gflag nturl" style="background-position:-400px -0px;"><img
+                src="//gtranslate.net/flags/blank.png" height="24" width="24" alt="Chinese (Traditional)" /></a><a
+            href="#" onclick="doGTranslate('fr|en');return false;" title="English" class="gflag nturl"
+            style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="24" width="24"
+                alt="English" /></a><a href="#" onclick="doGTranslate('fr|fr');return false;" title="French"
+            class="gflag nturl" style="background-position:-200px -100px;"><img src="//gtranslate.net/flags/blank.png"
+                height="24" width="24" alt="French" /></a><a href="#" onclick="doGTranslate('fr|de');return false;"
+            title="German" class="gflag nturl" style="background-position:-300px -100px;"><img
+                src="//gtranslate.net/flags/blank.png" height="24" width="24" alt="German" /></a><a href="#"
+            onclick="doGTranslate('fr|iw');return false;" title="Hebrew" class="gflag nturl"
+            style="background-position:-200px -300px;"><img src="//gtranslate.net/flags/blank.png" height="24"
+                width="24" alt="Hebrew" /></a><a href="#" onclick="doGTranslate('fr|hi');return false;" title="Hindi"
+            class="gflag nturl" style="background-position:-500px -100px;"><img src="//gtranslate.net/flags/blank.png"
+                height="24" width="24" alt="Hindi" /></a><a href="#" onclick="doGTranslate('fr|it');return false;"
+            title="Italian" class="gflag nturl" style="background-position:-600px -100px;"><img
+                src="//gtranslate.net/flags/blank.png" height="24" width="24" alt="Italian" /></a><a href="#"
+            onclick="doGTranslate('fr|ja');return false;" title="Japanese" class="gflag nturl"
+            style="background-position:-700px -100px;"><img src="//gtranslate.net/flags/blank.png" height="24"
+                width="24" alt="Japanese" /></a><a href="#" onclick="doGTranslate('fr|pt');return false;"
+            title="Portuguese" class="gflag nturl" style="background-position:-300px -200px;"><img
+                src="//gtranslate.net/flags/blank.png" height="24" width="24" alt="Portuguese" /></a><a href="#"
+            onclick="doGTranslate('fr|ru');return false;" title="Russian" class="gflag nturl"
+            style="background-position:-500px -200px;"><img src="//gtranslate.net/flags/blank.png" height="24"
+                width="24" alt="Russian" /></a><a href="#" onclick="doGTranslate('fr|es');return false;" title="Spanish"
+            class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png"
+                height="24" width="24" alt="Spanish" /></a>
+    </div>
+    <script defer type="text/javascript">
+        function googleTranslateElementInit2() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'fr',
+                autoDisplay: false
+            }, 'google_translate_element2');
+        }
+    </script>
+    <script defer type="text/javascript"
+        src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
+    <script defer type="text/javascript">
+        /* <![CDATA[ */
+        eval(function (p, a, c, k, e, r) {
+            e = function (c) {
+                return (c < a ? '' : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) :
+                    c.toString(36))
+            };
+            if (!''.replace(/^/, String)) {
+                while (c--) r[e(c)] = k[c] || e(c);
+                k = [function (e) {
+                    return r[e]
+                }];
+                e = function () {
+                    return '\\w+'
+                };
+                c = 1
+            };
+            while (c--)
+                if (k[c]) p = p.replace(new RegExp('\\b' + e(c) + '\\b', 'g'), k[c]);
+            return p
+        }('6 7(a,b){n{4(2.9){3 c=2.9("o");c.p(b,f,f);a.q(c)}g{3 c=2.r();a.s(\'t\'+b,c)}}u(e){}}6 h(a){4(a.8)a=a.8;4(a==\'\')v;3 b=a.w(\'|\')[1];3 c;3 d=2.x(\'y\');z(3 i=0;i<d.5;i++)4(d[i].A==\'B-C-D\')c=d[i];4(2.j(\'k\')==E||2.j(\'k\').l.5==0||c.5==0||c.l.5==0){F(6(){h(a)},G)}g{c.8=b;7(c,\'m\');7(c,\'m\')}}',
+            43, 43,
+            '||document|var|if|length|function|GTranslateFireEvent|value|createEvent||||||true|else|doGTranslate||getElementById|google_translate_element2|innerHTML|change|try|HTMLEvents|initEvent|dispatchEvent|createEventObject|fireEvent|on|catch|return|split|getElementsByTagName|select|for|className|goog|te|combo|null|setTimeout|500'
+                .split('|'), 0, {}))
+                            /* ]]> */
+    </script>
+    <div id="google_translate_element2"></div>
+
     <!-- Copyright Section-->
     <div class="copyright py-4 text-center text-white">
         <div class="container"><small>Copyright &copy; nair0lf32 2021</small></div>
