--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -214,7 +214,7 @@
                         qui a fini banni (je vous jure j'ai rien fait), puis j'ai "emprunté" le
                         compte de mon frère
                         <a href="https://euw.op.gg/summoner/userName=harmelford">harmelford</a>
-                        qui est actuellement mon compte principal (il joue rarement).
+                        qui est actuellement mon compte principal (il joue plus vraiment dessus).
                         J'ai créé un compte secondaire sous le pseudo:
                         <a href="https://euw.op.gg/summoner/userName=medic229">medic229</a>.
                         Il y a en bas deux vidéos qui expliquent ce qu'est
@@ -244,21 +244,21 @@
                         Riot games (Rito pour les intimes):
                         <a href="https://euw.leagueoflegends.com/fr-fr/">Site officiel du jeu</a>.&nbsp;&nbsp;<br />
                         En fait c'est le lien vers le site de league of legends car désormais rito a créé
-                        d'autres jeux (Valorant, Legends of Runeterra, Teamfight tactics..)
+                        d'autres jeux (Valorant, Legends of Runeterra, Teamfight tactics...)
                         <br />Il y a dessus un tutoriel qui explique mieux les règles du jeu,
                         si vous etes interressés. Par contre ATTENTION, league of legends n'a
                         pas que des aspects positifs et on vous en parle sur le site du jeu
                         (commnauté la plus toxique du gaming? XD).
-                        Mais ça c'est tout un débat que je n'aborderai pas ici (mais vous etes avertis).<br />
+                        Mais ça c'est tout un débat que je n'aborderai pas ici.<br />
 
                         Leaue of legends c'est tout un univers avec une belle histoire écrite autour de chaque
                         personnage du jeu.
-                        Riots Games l'a vite compris et a dévellopé une série d'animation "Arcane" basée sur une
+                        Riot Games l'a vite compris et a développé une série d'animation "Arcane" basée sur une
                         (minime) partie de
-                        l'univers du jeu. Ils font des animations de qualité q'on peut découvrir dans leurs vidéos.
+                        l'univers du jeu. Ils font des animations de qualité qu'on peut découvrir à travers leurs vidéos d'animation.
                         personnellement les cinématiques des champions et les hymnes du mondial sont mes favorites.
 
-                        Il y en a plein et je pex pas tout lister donc Je vous invite à découvrir la chaine youtube de
+                        Il y en a plein et je peux pas tout lister donc Je vous invite à découvrir la chaine youtube de
                         League of legends: &nbsp;<br /> <br /> <a href="https://www.youtube.com/c/leagueoflegends/"
                             target="_blank">Cliquez
                             ici pour voir les vidéos</a>
@@ -270,7 +270,7 @@
                         <br />
 
                         Bon, sur ce je vous laisse.
-                        Peut-etre pourrions nous nous croiser dans la faille de
+                        Peut-etre pourrions nous nous re-croiser dans la faille de
                         l'invocateur. "Bonne chance dans les champs de justice".
                         <br><br>
                         <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;">
