add new favorites page

--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@
                             href="#comment">Commentaire</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
                             href="/lol-fanzone.html">Lol fanzone</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
+                            href="/favorites.html">
+                            Favs</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-
-
 
 
     <!-- Masthead-->
