--- a/favorites.html
+++ b/favorites.html
@@ -106,195 +106,47 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
                             href="/index.html">Accueil</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">A
-                            propos</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="/favorites.html">
-                            Favs</a></li>
+                            href="/lol-fanzone.html">Lol fanzone</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
 
-    <!-- carousel -->
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                aria-label="Slide 4"></button>
-        </div>
-        <!-- carousel images -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="/assets/img/lolpics/wpp.jpg" class="d-block w-100" alt="lol-wpp">
-                <div class="carousel-caption">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends</h4>
-                    <p class="py-1 text-center"> Par Riot Games</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/img/lolpics/wpp2.jpg" class="d-block w-100" alt="lol-wpp2">
-                <div class="carousel-caption ">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends</h4>
-                    <p class="py-1 text-center"> Par Riot Games</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/img/lolpics/wpp3.jpg" class="d-block w-100" alt="lol-wpp3">
-                <div class="carousel-caption ">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends</h4>
-                    <p class="py-1 text-center"> Par Riot Games</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/img/lolpics/wpp4.png" class="d-block w-100" alt="lol-wpp4">
-                <div class="carousel-caption ">
-                    <h4 class="masthead-heading text-uppercase mb-0"> League of legends</h4>
-                    <p class="py-1 text-center"> Par Riot Games</p>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
 
-    <!-- Yes I am using a whole section as a separator (design purposes). I have no shame XD-->
-    <section class="page-section bg-secondary text-white mb-0" id="theGame">
-        <!-- Comment Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Le jeu: </h2>
-        <!-- Icon Divider-->
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="las la-gamepad la-2x"></i></div>
-            <div class="divider-custom-line"></div>
-        </div>
-    </section>
-
-
-    <!-- About Section-->
-    <section class="page-section bg-secondary text-white mb-0 lol-about img-fluid" id="about">
-        <div class="container">
-
-            <img class="img-fluid" src="assets/img/lolpics/lol-logo.png" alt="EDEMESSI_FLorian_nairolf32" />
-
-            <!-- About Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-white">A propos</h2>
+    <!-- Masthead-->
+    <header class="masthead bg-primary text-white text-center">
+        <div class="container d-flex align-items-center flex-column">
+            <!-- Masthead Heading-->
+            <h1 class="masthead-heading text-uppercase mb-0 hello">Mes trucs favoris</h1>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="las la-scroll la-2x"></i></div>
+                <div class="divider-custom-icon"><i class="las la-star la-2x"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
-            <!-- About Section Content-->
-            <div class="row">
-                <div class="lead text-white text-center mb-0">
-                    <p> Salut! Ceci est une page fanzone de league of legends réalisée par nair0lf32 (moi quoi).
-                        <br />Vu le temps que je consacre à ce jeu
-                        je me suis dit pourquoi ne pas en parler un peu? Alors League of legends est
-                        un jeu réalisé et appartenant à Riot games Inc. Un petit studio au
-                        départ, aujourd'hui c'est une grosse entreprise rachetée par tencent
-                        games (le géant du jeu vidéo chinois). Le jeu a bien évolué au fil du
-                        temps (depuis 2009) mais personnellement je l'ai rejoint en
-                        2016 (saison 6 je crois). J'ai débuté sur le serveur europe de l'ouest
-                        (EUW) avec un pote "freddy"&nbsp;
-                        <a href="https://euw.op.gg/summoner/userName=blckGamer">Blckgamer</a>
-                        qui est actuellement platine sur le serveur russe. J'ai débuté avec un compte
-                        <a href="https://euw.op.gg/summoner/userName=florianXnairolf">florianXnairolf</a>
-                        qui a fini banni (je vous jure j'ai rien fait), puis j'ai "emprunté" le
-                        compte de mon frère
-                        <a href="https://euw.op.gg/summoner/userName=harmelford">harmelford</a>
-                        qui est actuellement mon compte principal (il joue plus vraiment dessus).
-                        J'ai créé un compte secondaire sous le pseudo:
-                        <a href="https://euw.op.gg/summoner/userName=medic229">medic229</a>.
-                        Il y a en bas deux vidéos qui expliquent ce qu'est
-                        league of legends (promo en bonus):<br />
-                        <br />
-                    </p>
-
-                    <!-- 16:9 aspect ratio -->
-                    <div class="ratio ratio-16x9 youvid">
-                        <iframe src="https://www.youtube.com/embed/uhZTFIfRhqs" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-
-                    <!-- 16:9 aspect ratio -->
-                    <div class="ratio ratio-16x9 youvid">
-                        <iframe src="https://www.youtube.com/embed/SwlBTktgMM4" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
+        </div>
+    </header>
 
 
-                    <p class="lead text-white text-center mb-0">
-                        <br />&nbsp;Sinon vous pouez toujours visiter le site web officiel de
-                        Riot games (Rito pour les intimes):
-                        <a href="https://euw.leagueoflegends.com/fr-fr/">Site officiel du jeu</a>.&nbsp;&nbsp;<br />
-                        En fait c'est le lien vers le site de league of legends car désormais rito a créé
-                        d'autres jeux (Valorant, Legends of Runeterra, Teamfight tactics...)
-                        <br />Il y a dessus un tutoriel qui explique mieux les règles du jeu,
-                        si vous etes interressés. Par contre ATTENTION, league of legends n'a
-                        pas que des aspects positifs et on vous en parle sur le site du jeu
-                        (commnauté la plus toxique du gaming? XD).
-                        Mais ça c'est tout un débat que je n'aborderai pas ici.<br />
+    <!-- About Section-->
+    <section class="page-section bg-secondary text-white mb-0 img-fluid" id="about">
+        <div class="container">
+            <div class="lead text-white text-center mb-0">
+                <p>Bon je me suis dit que vu que c'est mon site personnel, je peux bien parler un peu plus
+                    de moi ici, notamment les trucs que j'aime bien.
 
-                        Leaue of legends c'est tout un univers avec une belle histoire écrite autour de chaque
-                        personnage du jeu.
-                        Riot Games l'a vite compris et a développé une série d'animation "Arcane" basée sur une
-                        (minime) partie de
-                        l'univers du jeu. Ils font des animations de qualité qu'on peut découvrir à travers leurs vidéos
-                        d'animation.
-                        personnellement les cinématiques des champions et les hymnes du mondial sont mes favorites.
+                    (flemme je le ferai plus tard)
 
-                        Il y en a plein et je peux pas tout lister donc Je vous invite à découvrir la chaine youtube de
-                        League of legends: &nbsp;<br /> <br /> <a href="https://www.youtube.com/c/leagueoflegends/"
-                            target="_blank">Cliquez
-                            ici pour voir les vidéos</a>
+                </p>
 
-                        <br /> Mes favorites c'est "warriors" et "ennemy" de imagine dragons, "ignite" de zedd,
-                        "Rise", "The legends", "seconds", "chasseurs éternels"...
+                <p class="lead text-white text-center mb-0">
 
-                        bref j'aime bien leurs vidéos quoi (XD)
-                        <br />
-
-                        Bon, sur ce je vous laisse.
-                        Peut-etre pourrions nous nous re-croiser dans la faille de
-                        l'invocateur. "Bonne chance dans les champs de justice".
-                        <br><br>
-                        <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;">
-                            nair0lf32 </span>
-                    </p>
-                </div>
+                </p>
             </div>
         </div>
-    </section>
-
-
-    <!-- Another separator I am totally asssuming (proudly XD )-->
-    <section class="page-section bg-secondary text-white mb-0" id="disclaimer">
-        <!-- Comment Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Disclaimer</h2>
-        <!-- Icon Divider-->
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <div class="divider-custom-icon"><i class="las la-gavel la-2x"></i></div>
-            <div class="divider-custom-line"></div>
         </div>
     </section>
 
@@ -302,15 +154,7 @@
     <!-- Footer-->
     <footer class="footer text-center">
         <div class="container">
-            <div class="row">
-                <!-- Footer About Text-->
-                <p class="lead mb-0">
-                    Ce site n'est pas n'est pas approuvé par Riot Games et ne reflète pas les points de vue ou opinions
-                    de Riot Games ou de toute personne officiellement impliquée dans la production ou la gestion
-                    des propriétés de Riot Games. Riot Games et toutes les propriétés associées sont des marques ou des
-                    marques déposées de Riot Games, Inc.
-                </p>
-            </div>
+
         </div>
     </footer>
 
