updating favorites page

--- a/favorites.html
+++ b/favorites.html
@@ -127,36 +127,91 @@
                 <div class="divider-custom-icon"><i class="las la-star la-2x"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
+            <p class="lead text-white text-center mb-0">
+                Bon je me suis dit que vu que c'est mon site personnel, je peux bien parler un peu plus
+                de moi ici, notamment les trucs que j'aime bien. En gros cette page est dédiée à mes trucs
+                favoris. Comme j'aime bien lister et rassembler des trucs, vous allez peut-être trouver
+                un truc qui vous intéresse aussi. Je vais séparer par catégories (parce que j'aime bien
+                organiser les choses). En fait cette page me sert un peu de repère à moi même, afin de
+                facilement retrouver des liens vers par exemple mes outils de développement favoris.
+            </p>
         </div>
     </header>
 
 
-    <!-- About Section-->
+    <!-- Tools Section-->
     <section class="page-section bg-secondary text-white mb-0 img-fluid" id="about">
         <div class="container">
-            <div class="lead text-white text-center mb-0">
-                <p>Bon je me suis dit que vu que c'est mon site personnel, je peux bien parler un peu plus
-                    de moi ici, notamment les trucs que j'aime bien.
-
-                    (flemme je le ferai plus tard)
-
-                </p>
-
+            <!-- Comment Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Langages et Outils</h2>
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="las la-screwdriver la-2x"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <div>
                 <p class="lead text-white text-center mb-0">
+                    Il n'y a pas vraiment de langage ou d'outil meilleur qu'un autre, vu que chacun sert à
+                    un but précis. J'ai utilisé pas mal de langages et outils (sans vraiment les maitriser totalement,
+                    mais je cherche à me spécialiser). Je me suis interressé à la programmation avec des potes au
+                    collège, On avait pour objectif de faire un jeu vidéo (mdr). On a vite compris que c'était pas
+                    simple. Ce qui explique que mon tout premier langage fut le <a
+                        href="https://fr.wikipedia.org/wiki/C%2B%2B">C++</a>.
+                    J'ai ensuite basculé vers le <a href="https://www.java.com/fr/download/">Java</a>
+                    puis <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Python">Python</a> qui ont peut
+                    dire
+                    reste mon favori. Il est simple mais polyvalent si on se soucie peu de la performance. Pour le web
+                    le
+                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_HTML">HTML</a>,
+                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_CSS">CSS</a>, <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_JavaScript">JavaScript</a> sont un
+                    trio
+                    incontournable. Puis le backend me fit toucher au<a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_PHP">PHP</a>. Enfin, je me suis mis
+                    au mobile
+                    natif avec java qui se fait progressivement remplacer par <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Kotlin">Kotlin</a>. Notez comment
+                    j'ai jamais
+                    touché à IOS (swift, objective-c). J'ai aussi touché à <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_C#">C#</a>
+                    pour des projets mini-jeux vidéos. Je compte apprendre un peu de <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Golang">Go</a> aussi.
+                    </br>
+
+                    Actuellement je m'intéressse particulièrement au développement web moderne avec divers frameworks
+                    javascript
+                    (React, Angular, Vue, ...), mais surtout le développement cross-platform avec comme favori
+                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Flutter">Flutter</a>. L'idée d'une
+                    seule base de code
+                    pour plusieurs plateformes me plait beaucoup, meme si certains doutent de la performance.
+                    Bon, On comprends clairement que j'ai pas de préférence réelle pour un langage mais je pense avoir
+                    dégagé mes favoris.
+                    </br>
+                    Ensuite, j'ai tendance à faire mes assets moi meme (je suis nul en vrai, je devrais penser à payer
+                    un professionel). Pour mes graphiques j'utilise <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Photoshop">Photoshop</a> et <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Illustrator">Illustrator</a>.
+                    (versions plus ou moins légales), pour la 3D j'utilise <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Blender">Blender</a>, j'ai touché à
+                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">RPG Maker</a>
+                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Unity">Unity</a> et
+                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">Unreal engine</a>, <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">Godot</a>, <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">Gdevelopp</a> pour le
+                    jeu-vidéo. Et j'ai tenté la musique avec <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">LMMS</a> et <a
+                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">FL studio</a>
+
 
                 </p>
+
+                (grosse flemme)
+
             </div>
         </div>
         </div>
     </section>
-
-
-    <!-- Footer-->
-    <footer class="footer text-center">
-        <div class="container">
-
-        </div>
-    </footer>
 
     <!-- GTranslate: https://gtranslate.io/ -->
     <div class="page-section d-flex align-items-center flags bg-secondary justify-content-center">
