updating favorites page

--- a/favorites.html
+++ b/favorites.html
@@ -61,6 +61,8 @@
     <!-- Line awesome icons (free version)-->
     <link rel="stylesheet"
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <!-- Devicons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <!-- Google fonts-->
     <link defer rel="preconnect" href="https://fonts.googleapis.com">
     <link defer rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -128,12 +130,14 @@
                 <div class="divider-custom-line"></div>
             </div>
             <p class="lead text-white text-center mb-0">
-                Bon je me suis dit que vu que c'est mon site personnel, je peux bien parler un peu plus
+                Je me suis dit que vu que c'est mon site personnel, je peux bien parler un peu plus
                 de moi ici, notamment les trucs que j'aime bien. En gros cette page est dédiée à mes trucs
                 favoris. Comme j'aime bien lister et rassembler des trucs, vous allez peut-être trouver
-                un truc qui vous intéresse aussi. Je vais séparer par catégories (parce que j'aime bien
-                organiser les choses). En fait cette page me sert un peu de repère à moi même, afin de
-                facilement retrouver des liens vers par exemple mes outils de développement favoris.
+                quelque chose qui vous intéresse aussi. Je vais séparer par catégories (parce que j'aime bien
+                organiser). En fait cette page me sert un peu de repère à moi même, afin de
+                facilement retrouver des liens vers, par exemple, mes outils de développement favoris. Vu que les goûts
+                peuvent changer il se peut que je modifie cette page parfois...mais bon globalement ça va pas trop
+                changer.
             </p>
         </div>
     </header>
@@ -154,59 +158,175 @@
                 <p class="lead text-white text-center mb-0">
                     Il n'y a pas vraiment de langage ou d'outil meilleur qu'un autre, vu que chacun sert à
                     un but précis. J'ai utilisé pas mal de langages et outils (sans vraiment les maitriser totalement,
-                    mais je cherche à me spécialiser). Je me suis interressé à la programmation avec des potes au
-                    collège, On avait pour objectif de faire un jeu vidéo (mdr). On a vite compris que c'était pas
+                    mais actuellement je cherche à me concentrer dans un domaine précis). Je me suis interressé à la
+                    programmation
+                    avec des potes du collège et On avait pour objectif de faire un jeu vidéo (mdr). On a vite compris
+                    que c'était pas
                     simple. Ce qui explique que mon tout premier langage fut le <a
-                        href="https://fr.wikipedia.org/wiki/C%2B%2B">C++</a>.
-                    J'ai ensuite basculé vers le <a href="https://www.java.com/fr/download/">Java</a>
-                    puis <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Python">Python</a> qui ont peut
-                    dire
-                    reste mon favori. Il est simple mais polyvalent si on se soucie peu de la performance. Pour le web
-                    le
-                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_HTML">HTML</a>,
+                        href="https://fr.wikipedia.org/wiki/C%2B%2B">C++</a>. J'ai immédiatement basculé vers <a
+                        href="https://www.java.com/fr/download/">Java</a>
+                    puis <a href="https://www.python.org/">Python</a> qui on peut
+                    dire reste un de mes favoris. Il est simple mais polyvalent, surtout si on se soucie peu de la
+                    performance.
+                    Pour le web le
+                    <a href="https://developer.mozilla.org/fr/docs/Web/HTML">HTML</a>,
                     <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_CSS">CSS</a>, <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_JavaScript">JavaScript</a> sont un
+                        href="https://developer.mozilla.org/fr/docs/Web/JavaScript">JavaScript</a> sont un
                     trio
-                    incontournable. Puis le backend me fit toucher au<a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_PHP">PHP</a>. Enfin, je me suis mis
+                    incontournable. Puis j'ai découvert le backend web avec<a href="https://www.php.net/">PHP</a>.
+                    Enfin, je me suis mis
                     au mobile
-                    natif avec java qui se fait progressivement remplacer par <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Kotlin">Kotlin</a>. Notez comment
+                    natif avec java qui se fait progressivement "remplacer" par <a
+                        href="https://kotlinlang.org/">Kotlin</a>. Notez comment
                     j'ai jamais
-                    touché à IOS (swift, objective-c). J'ai aussi touché à <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_C#">C#</a>
-                    pour des projets mini-jeux vidéos. Je compte apprendre un peu de <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Golang">Go</a> aussi.
+                    touché à IOS (swift, objective-c). C'est important! J'ai aussi touché au <a
+                        href="https://fr.wikipedia.org/wiki/C_sharp">C#</a>
+                    pour des projets mini-jeux vidéos. Je compte apprendre un peu de <a href="https://go.dev/">Go</a>
+                    aussi.
                     </br>
-
                     Actuellement je m'intéressse particulièrement au développement web moderne avec divers frameworks
                     javascript
                     (React, Angular, Vue, ...), mais surtout le développement cross-platform avec comme favori
-                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Flutter">Flutter</a>. L'idée d'une
+                    <a href="https://flutter.dev/">Flutter</a>. L'idée d'une
                     seule base de code
-                    pour plusieurs plateformes me plait beaucoup, meme si certains doutent de la performance.
-                    Bon, On comprends clairement que j'ai pas de préférence réelle pour un langage mais je pense avoir
-                    dégagé mes favoris.
-                    </br>
-                    Ensuite, j'ai tendance à faire mes assets moi meme (je suis nul en vrai, je devrais penser à payer
-                    un professionel). Pour mes graphiques j'utilise <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Photoshop">Photoshop</a> et <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Illustrator">Illustrator</a>.
-                    (versions plus ou moins légales), pour la 3D j'utilise <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Blender">Blender</a>, j'ai touché à
-                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">RPG Maker</a>
-                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Unity">Unity</a> et
-                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">Unreal engine</a>, <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">Godot</a>, <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">Gdevelopp</a> pour le
-                    jeu-vidéo. Et j'ai tenté la musique avec <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">LMMS</a> et <a
-                        href="https://fr.wikipedia.org/wiki/Langage_de_programmation_Cinema4D">FL studio</a>
-
-
+                    pour plusieurs plateformes me plait beaucoup, même si certains évoquent la faible performance.
+                    Bon, On retient clairement que j'ai pas de préférence réelle pour un langage mais je pense avoir
+                    dégagé quelques favoris.
                 </p>
 
-                (grosse flemme)
+                <div class="fav-container img-fluid">
+                    <img class="fav-img"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" />
+                    <img class="fav-img"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
+                    <img class="fav-img"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flutter/flutter-original.svg" />
+                </div>
+                </br>
+
+                <p class="lead text-white text-center mb-0">
+                    Ensuite, j'ai tendance à faire mes assets moi meme (je suis nul en vrai, je devrais penser à payer
+                    un professionel). Pour mes graphiques j'utilise <a
+                        href="https://www.adobe.com/fr/products/photoshop.html">Photoshop</a> et <a
+                        href="https://www.adobe.com/fr/products/illustrator.html">Illustrator</a>.
+                    (versions plus ou moins légales), Pour aller vite
+                    <a href="https://www.canva.com/">Canva</a>, et
+                    pour la 3D j'utilise <a href="https://www.blender.org/">Blender</a>
+                </p>
+                <div class="fav-container img-fluid">
+                    <img class="fav-img"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/photoshop/photoshop-line.svg" />
+                    <img class="fav-img"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/illustrator/illustrator-line.svg" />
+                    <img class="fav-img"
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/blender/blender-original.svg" />
+                </div>
+                </br>
+
+                <p class="lead text-white text-center mb-0">
+                    Je disais qu'on voulait faire des jeux, j'ai fait deux trois prototypes jamais publiés. J'ai
+                    commencé avec
+                    <a href="https://www.rpgmakerweb.com/">RPG Maker</a> (j'aime bien les RPG), Puis
+                    <a href="https://unity.com/"> Unity</a>,
+                    <a href="https://www.unrealengine.com/"> Unreal engine</a>, <a href="https://godotengine.org/">
+                        Godot</a>, <a href="https://gdevelop.io/"> Gdevelopp</a>
+                </p>
+                </br>
+
+                <p class="lead text-white text-center mb-0">
+                    J'ai aussi tenté la musique (quelle vie je mène) avec <a href="https://lmms.io/">LMMS</a> et <a
+                        href="https://www.image-line.com/">FL studio</a>, Mais je crois que c'est pas fait pour moi.
+                    Je vais juste utilser les sons gratuits sur internet pour mes trucs.
+                    <br>
+                    Pour mes montages vidéos (je suis nul là aussi), J'ai quand même une préférence pour <a
+                        href="https://www.adobe.com/fr/products/premiere.html">Première pro</a> et <a
+                        href="https://www.adobe.com/fr/products/aftereffects.html">After effects</a>. Il y a aussi aussi
+                    <a href="https://filmora.wondershare.net/">filmora</a>
+                    Pour aller plus vite.
+                    <br>
+                    Enfin, je termine cette partie par mon nouveau truc: la cybersécurité! Ici je vais pas détailler mes
+                    outils favoris.
+                    Je le fais déjà dans mon dépot github réservé à çà: <a
+                        href="https://github.com/nair0lf32/ctfs-writeups">Ctf-writeups!</a>
+                </p>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <!-- Videogames Section-->
+    <section class="page-section bg-primary text-white mb-0 img-fluid" id="about">
+        <div class="container">
+            <!-- Comment Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Jeux-vidéos</h2>
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="las la-gamepad la-2x"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <div>
+                <p class="lead text-white text-center mb-0">
+                    Quand je ne bosse pas je joue à des jeux vidéo. j'ai grandi à l'époque de la
+                    <a href="https://fr.wikipedia.org/wiki/Nintendo_Entertainment_System">NES et SNES</a> (super mario
+                    bros, donkey-kong,
+                    castlevania, ninja gaiden, contra, bomberman, ice climbers, duck hunt, pacman, tetris...) A l'époque
+                    c'était
+                    distribué sur
+                    des disques VCD compatibles avec 300 jeux (games 300). J'y jouais avec mon père qui éclatait quand
+                    même bien mes scores. Franchement je pense que j'ai joué à pas mal de trucs et je pourrai jamais
+                    tout citer.
+                </p>
+
+                <div class="fav-container img-fluid">
+                    <img class="fav-img-wide"
+                        src="https://mario.nintendo.com/static/5173cb58b062e1ec02553be8ed1b8019/b2548/header-mario.png" />
+                    <img class="fav-img-wide" src="https://www.zelda.com/assets/img/home/link_not_roach.png" />
+                    <img class="fav-img" src="" />
+                </div>
+                </br>
+
+                <p class="lead text-white text-center mb-0">
+                    J'avais pas les consoles de "riches" (
+                    <a href="https://www.playstation.com/">Playstation</a> et
+                    <a href="https://www.xbox.com/">Xbox</a>), donc je
+                    m'incrustais avec mes potes
+                    qui en avaient. Quand j'ai découvert les émulateurs (j'avais un PC au moins) ma carrière de pirate
+                    informatique a débuté (lol).
+                    J'avais plus besoin de console (ni de payer). J'ai ainsi découvert ce qui allait devenir mes jeux
+                    favoris (Pokémon, Zelda, Final fantasy...).
+                </p>
+                <div class="fav-container img-fluid">
+                    <img class="fav-img" src="" />
+                    <img class="fav-img" src="" />
+                    <img class="fav-img" src="" />
+                </div>
+                </br>
+
+                <p class="lead text-white text-center mb-0">
+                    Puis J'ai joué gros titres (Skyrim, Fallout, GTA, Assassins creed, far cry, Call of duty...).
+                    Les consoles que j'ai possédé sont une Gameboy advance et une playstation portable (PSP). Le reste
+                    je le fais tourner sur mon PC (légalement ou "non"). Sans plus raconter ma vie, si je dois choisir
+                    un seul jeu préféré ça va être quasi-impossible.
+                    Déjà mes genres favoris c'est Jeux-de-role (RPG) et là je suis un gros fan de la série des souls de
+                    fromsoftware (Dark souls, Sekiro, Elden ring...).
+                </p>
+                <div class="fav-container img-fluid">
+                    <img class="fav-img" src="" />
+                    <img class="fav-img" src="" />
+                    <img class="fav-img" src="" />
+                </div>
+                </br>
+
+                <p class="lead text-white text-center mb-0">
+                    Actuellement, je joue plus en ligne et mon jeu "favori" du moment est league of legends.
+                    J'en parle justement ici: <a href="/lol-fanzone.html">League of
+                        Legends Fanzone</a>. pour finir cette section je partage quelques platformes célèbres
+                    de jeux en ligne où je suis présent: <a href="https://www.twitch.tv/florianXnairolf">Twitch</a>,
+                    <a href="https://www.romstation.fr/profile/1604618-nairolf32/">Romstation</a>,
+                    <a href="https://steamcommunity.com/profiles/76561198264941556/">Steam</a>.
+
+                </p>
 
             </div>
         </div>
